--- a/voidfall/index.html
+++ b/voidfall/index.html
@@ -445,7 +445,7 @@
             <select id="lang" class="lang" v-model="appLang" @change="appLangChanged()">
                 <option value="en">English</option>
                 <option value="de">Deutsch</option>
-                <option value="fr">français</option>
+                <option value="fr">Français</option>
             </select>
             <p>
                 <label for="numberOfPlayers">{{ langStrs[appLang]["numOfPlayers"] }}: </label>
